--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,13 @@
 	<title>🍖 Churrascômetro</title>
 
 	<link rel='stylesheet' href='/global.css'>
+	<link rel='stylesheet' href='/app.css'>
+	<link rel='stylesheet' href='/theme.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com"/>
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&display=swap" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
 
 	<script defer src='/build/bundle.js'></script>
 </head>
